Stubbed out Web UI paths (with @PathVariable annotations).
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3255 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/boilerplate.html
+++ b/src/main/resources/templates/boilerplate.html
@@ -19,7 +19,7 @@
         <div class="container">
           <div class="navbar-header">
             <a class="navbar-nav navbar-brand"
-               th:href="${(#mvc.url('UIC#index')).build()}"
+               th:href="${(#mvc.url('UIC#root')).build()}"
                th:text="@pom.artifactId@"/>
           </div>
         </div>
