--- a/src/main/resources/templates/boilerplate.html
+++ b/src/main/resources/templates/boilerplate.html
@@ -27,12 +27,20 @@
             <li class="nav-item">
               <a class="nav-link" th:href="@{/tags}" th:text="Tags"/>
             </li>
+            <li class="nav-item" sec:authorize="!isAuthenticated()">
+              <a class="nav-link" th:href="@{/login}" th:text="Login"/>
+            </li>
+            <li class="nav-item" sec:authorize="isAuthenticated()">
+              <a class="nav-link" th:href="@{/logout}" th:text="Logout"/>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
     <div class="container">
-      <!-- Content based on context -->
+      <th:block th:switch="${#request.servletPath}">
+        <th:block th:case="'/login'" th:insert="~{login.html}"/>
+      </th:block>
     </div>
     <footer class="fixed-bottom bg-dark text-white">
       <nav class="navbar navbar-dark">
