--- a/src/main/resources/templates/boilerplate.html
+++ b/src/main/resources/templates/boilerplate.html
@@ -19,8 +19,15 @@
         <a class="navbar-brand"
            th:href="${(#mvc.url('UIC#root')).build()}"
            th:text="@pom.artifactId@"/>
+        <div class="navbar-expand" sec:authorize="hasAuthority('AUTHOR')">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" th:href="@{/preview}" th:text="Preview"/>
+            </li>
+          </ul>
+        </div>
         <div class="navbar-expand">
-          <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" th:href="@{/authors}" th:text="Authors"/>
             </li>
@@ -40,6 +47,7 @@
     <div class="container">
       <th:block th:switch="${#request.servletPath}">
         <th:block th:case="'/login'" th:insert="~{login.html}"/>
+        <th:block th:case="'/preview'" th:insert="~{preview.html}"/>
       </th:block>
     </div>
     <footer class="fixed-bottom bg-dark text-white">
