Added SUBSCRIBER and AUTHOR roles to security model.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3264 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/boilerplate.html
+++ b/src/main/resources/templates/boilerplate.html
@@ -26,6 +26,10 @@
             </li>
           </ul>
         </div>
+        <div class="navbar-expand" sec:authorize="hasAuthority('SUBSCRIBER')">
+          <ul class="navbar-nav">
+          </ul>
+        </div>
         <div class="navbar-expand">
           <ul class="navbar-nav">
             <li class="nav-item">
