Incremental improvement to login form.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3268 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/boilerplate.html
+++ b/src/main/resources/templates/boilerplate.html
@@ -82,6 +82,7 @@
                th:href="${compass.lastPage}" th:text="'>|'"/>
           </div>
           <div class="col-sm text-right">
+            <p sec:authorize="isAuthenticated()" sec:authentication="name"/>
           </div>
         </div>
       </nav>
