--- a/src/main/resources/templates/UIController.html
+++ b/src/main/resources/templates/UIController.html
@@ -67,11 +67,16 @@
     </nav>
     <div class="container">
       <th:block th:switch="${#request.servletPath}">
-        <th:block th:case="'/authors/'" th:insert="~{authors.html}"/>
-        <th:block th:case="'/posts/'" th:insert="~{posts.html}"/>
-        <th:block th:case="'/preview'" th:insert="~{preview.html}"/>
-        <th:block th:case="'/login'" th:insert="~{login.html}"/>
-        <th:block th:case="'/error'" th:insert="~{error.html}"/>
+        <th:block th:case="'/authors/'"
+                  th:insert="~{UIController/authors.html}"/>
+        <th:block th:case="'/posts/'"
+                  th:insert="~{UIController/posts.html}"/>
+        <th:block th:case="'/preview'"
+                  th:insert="~{UIController/preview.html}"/>
+        <th:block th:case="'/login'"
+                  th:insert="~{UIController/login.html}"/>
+        <th:block th:case="'/error'"
+                  th:insert="~{UIController/error.html}"/>
       </th:block>
     </div>
     <footer class="fixed-bottom bg-dark text-white">
