--- a/src/main/resources/templates/UIController.html
+++ b/src/main/resources/templates/UIController.html
@@ -30,7 +30,8 @@
               <div class="dropdown-menu"
                    th:attr="aria-labelledby=${#ids.prev('dropdown')}">
                 <a class="dropdown-item"
-                   th:href="@{/preview}" th:text="Preview"/>
+                   th:href="${(#mvc.url('UIC#preview')).build()}"
+                   th:text="Preview"/>
               </div>
             </li>
             <li sec:authorize="hasAuthority('SUBSCRIBER')"
@@ -52,14 +53,19 @@
               <div class="dropdown-menu"
                    th:attr="aria-labelledby=${#ids.prev('dropdown')}">
                 <a class="dropdown-item"
-                   th:href="@{/authors/}" th:text="Authors"/>
+                   th:href="${(#mvc.url('UIC#authors')).build()}"
+                   th:text="Authors"/>
               </div>
             </li>
             <li sec:authorize="!isAuthenticated()" class="nav-item">
-              <a class="nav-link" th:href="@{/login}" th:text="Login"/>
+              <a class="nav-link"
+                 th:href="${(#mvc.url('UIC#login')).build()}"
+                 th:text="Login"/>
             </li>
             <li sec:authorize="isAuthenticated()" class="nav-item">
-              <a class="nav-link" th:href="@{/logout}" th:text="Logout"/>
+              <a class="nav-link"
+                 th:href="${(#mvc.url('UIC#logout')).build()}"
+                 th:text="Logout"/>
             </li>
           </ul>
         </div>
