--- a/src/main/resources/templates/UIController/login.html
+++ b/src/main/resources/templates/UIController/login.html
@@ -3,22 +3,20 @@
   <div class="row justify-content-center">
     <div class="col-sm-6">
       <form class="form-signin" th:action="@{/login}" method="post">
-        <th:block th:with="name = 'username', type = 'email', label = 'E\'mail Address'">
-          <label class="sr-only"
-                 th:for="${#ids.next(name)}" th:text="${label}"/>
-          <input class="form-control" th:type="${type}"
-                 th:name="${name}" th:id="${#ids.seq(name)}"
-                 th:placeholder="${label}" required autofocus/>
-        </th:block>
-        <th:block th:with="name = 'password', type = 'password', label = 'Password'">
-          <label class="sr-only"
-                 th:for="${#ids.seq(name)}" th:text="${label}"/>
-          <input class="form-control" th:type="${type}"
-                 th:name="${name}" th:id="${#ids.seq(name)}"
-                 th:placeholder="${label}" required autofocus/>
-        </th:block>
-        <button class="btn btn-lg btn-primary btn-block" type="submit"
-                th:text="Login"/>
+        <input type="hidden"
+               th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+        <input type="email" th:name="username"
+               th:id="${#ids.seq('username')}" th:placeholder="'E\'mail Address'"
+               class="form-control" required autofocus/>
+        <label class="sr-only"
+               th:for="${#ids.prev('username')}" th:text="'E\'mail Address'"/>
+        <input type="password" th:name="password"
+               th:id="${#ids.seq('password')}" th:placeholder="Password"
+               class="form-control" required autofocus/>
+        <label class="sr-only"
+               th:for="${#ids.prev('password')}" th:text="Password"/>
+        <button class="btn btn-lg btn-primary btn-block"
+                type="submit" th:text="Login"/>
       </form>
     </div>
   </div>
