Dispatch on servletPath in Thymeleaf template.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3276 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/UIController.html
+++ b/src/main/resources/templates/UIController.html
@@ -73,16 +73,13 @@
     </nav>
     <div class="container">
       <th:block th:switch="${#request.servletPath}">
-        <th:block th:case="'/authors/'"
-                  th:insert="~{UIController/authors.html}"/>
-        <th:block th:case="'/posts/'"
-                  th:insert="~{UIController/posts.html}"/>
-        <th:block th:case="'/preview'"
-                  th:insert="~{UIController/preview.html}"/>
         <th:block th:case="'/login'"
-                  th:insert="~{UIController/login.html}"/>
+                  th:insert="~{${#execInfo.templateName + '/login'}}"/>
         <th:block th:case="'/error'"
-                  th:insert="~{UIController/error.html}"/>
+                  th:insert="~{${#execInfo.templateName + '/error'}}"/>
+        <th:block th:case="*">
+          <th:block th:insert="~{${#execInfo.templateName + #request.servletPath}}"/>
+        </th:block>
       </th:block>
     </div>
     <footer class="fixed-bottom bg-dark text-white">
