--- a/src/main/resources/templates/UIController/authors.html
+++ b/src/main/resources/templates/UIController/authors.html
@@ -1,4 +1,14 @@
 <!-- $Id$ -->
-<th:block th:each="author : ${authors}">
-  <div class="row" th:text="${author.email}"/>
-</th:block>
+<table class="table table-striped">
+  <tbody>
+    <tr th:each="author : ${page}" class="row">
+      <td class="col-sm-2 text-left">
+        <a th:href="@{/articles(author=${author.slug})}"
+           th:text="${author.name}"/>
+      </td>
+      <td class="col-sm text-left">
+        <div th:remove="tag" th:utext="${author.html}"/>
+      </td>
+    </tr>
+  </tbody>
+</table>
