Use @EnableGlobalMethodSecurity and @PreAuthorize annotations to enable and implement method level security.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3297 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/UIController/footer.html
+++ b/src/main/resources/templates/UIController/footer.html
@@ -25,7 +25,10 @@
            th:text="'>|'"/>
       </div>
       <div class="col-sm text-right">
-        <p sec:authorize="isAuthenticated()" sec:authentication="name"/>
+        <th:block sec:authorize="isAuthenticated()">
+          <span sec:authentication="name"/>
+          <span sec:authentication="authorities"/>
+        </th:block>
       </div>
     </div>
   </nav>
