--- a/src/main/resources/templates/UIController/articles.html
+++ b/src/main/resources/templates/UIController/articles.html
@@ -2,6 +2,9 @@
 <table class="table table-striped">
   <tbody>
     <tr th:each="article : ${page}" class="row">
+      <td class="col-sm text-left">
+        <div th:remove="tag" th:utext="${article.html}"/>
+      </td>
     </tr>
   </tbody>
 </table>
