Further divided template so UIController may become the base Bootstrap application template.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3312 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/UIController.html
+++ b/src/main/resources/templates/UIController.html
@@ -22,7 +22,7 @@
         <th:block th:case="'/error'"
                   th:insert="~{${#execInfo.templateName + '/error'}}"/>
         <th:block th:case="*">
-          <th:block th:insert="~{${'/forvm' + #request.servletPath}}"/>
+          <th:block th:insert="~{${'/forvm'}}"/>
         </th:block>
       </th:block>
     </div>
