--- a/src/main/resources/templates/UIController/navbar.html
+++ b/src/main/resources/templates/UIController/navbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-dark fixed-top bg-dark text-white">
   <div class="container">
     <a class="navbar-brand"
-       th:href="${(#mvc.url('UIC#root')).build()}"
+       th:href="@{/}"
        th:text="${'@pom.artifactId@'}"/>
     <div class="navbar-expand">
       <ul class="navbar-nav">
@@ -14,9 +14,7 @@
              href="#" th:text="Author"/>
           <div class="dropdown-menu"
                th:attr="aria-labelledby=${#ids.prev('dropdown')}">
-            <a class="dropdown-item"
-               th:href="${(#mvc.url('UIC#preview')).build()}"
-               th:text="Preview"/>
+            <a class="dropdown-item" th:href="@{/preview}" th:text="Preview"/>
           </div>
         </li>
         <li sec:authorize="hasAuthority('SUBSCRIBER')"
@@ -37,20 +35,14 @@
              href="#" th:text="Collections"/>
           <div class="dropdown-menu"
                th:attr="aria-labelledby=${#ids.prev('dropdown')}">
-            <a class="dropdown-item"
-               th:href="${(#mvc.url('UIC#authors')).build()}"
-               th:text="Authors"/>
+            <a class="dropdown-item" th:href="@{/authors}" th:text="Authors"/>
           </div>
         </li>
         <li sec:authorize="!isAuthenticated()" class="nav-item">
-          <a class="nav-link"
-             th:href="${(#mvc.url('UIC#login')).build()}"
-             th:text="Login"/>
+          <a class="nav-link" th:href="@{/login}" th:text="Login"/>
         </li>
         <li sec:authorize="isAuthenticated()" class="nav-item">
-          <a class="nav-link"
-             th:href="${(#mvc.url('UIC#logout')).build()}"
-             th:text="Logout"/>
+          <a class="nav-link" th:href="@{/logout}" th:text="Logout"/>
         </li>
       </ul>
     </div>
