Minor formatting change.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3314 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/UIController/scripts.html
+++ b/src/main/resources/templates/UIController/scripts.html
@@ -1,4 +1,3 @@
 <!-- $Id$ -->
 <script th:each="script : ${scripts}"
-        type="text/javascript" th:src="@{${script}}">
-</script>
+        type="text/javascript" th:src="@{${script}}" th:text="''"/>
