Interim check-in: Parameterized Bootstrap UI.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3315 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/forvm/body.html
+++ b/src/main/resources/templates/forvm/body.html
@@ -6,7 +6,7 @@
   <table class="table table-striped">
     <tbody>
       <tr th:each="article : ${articles}" class="row">
-        <td class="col-sm text-left">
+        <td class="col-sm">
           <div th:remove="tag" th:utext="${article.html}"/>
         </td>
       </tr>
@@ -21,7 +21,7 @@
           <a th:href="@{/articles(author=${author.slug})}"
              th:text="${author.name}"/>
         </td>
-        <td class="col-sm text-left">
+        <td class="col-sm">
           <div th:remove="tag" th:utext="${author.html}"/>
         </td>
       </tr>
