--- a/src/main/resources/templates/forvm/body.html
+++ b/src/main/resources/templates/forvm/body.html
@@ -1,6 +1,6 @@
 <!-- $Id$ -->
-<th:block th:if="${#ctx.containsVariable('article')}">
-  <div th:remove="tag" th:utext="${article.html}"/>
+<th:block th:if="${form != null}">
+  <th:block th:insert="~{${'/' + template + '/' + form.class.simpleName}}"/>
 </th:block>
 <th:block th:if="${#ctx.containsVariable('articles')}">
   <table class="table table-striped">
@@ -15,6 +15,9 @@
       </tr>
     </tbody>
   </table>
+</th:block>
+<th:block th:if="${#ctx.containsVariable('article')}">
+  <div th:remove="tag" th:utext="${article.html}"/>
 </th:block>
 <th:block th:if="${#ctx.containsVariable('authors')}">
   <table class="table table-striped">
@@ -31,72 +34,9 @@
     </tbody>
   </table>
 </th:block>
-<th:block th:switch="${#request.servletPath}">
-  <th:block th:case="'/login'">
-    <div class="jumbotron">
-      <div class="row justify-content-center">
-        <div class="col-sm-6">
-          <form class="form-signin" th:action="@{''}" method="post">
-            <input type="hidden"
-                   th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-            <input type="email" th:name="username"
-                   th:id="${#ids.seq('username')}"
-                   th:placeholder="'E\'mail Address'"
-                   class="form-control" required autofocus/>
-            <label class="sr-only"
-                   th:for="${#ids.prev('username')}"
-                   th:text="'E\'mail Address'"/>
-            <input type="password" th:name="password"
-                   th:id="${#ids.seq('password')}" th:placeholder="Password"
-                   class="form-control" required autofocus/>
-            <label class="sr-only"
-                   th:for="${#ids.prev('password')}" th:text="Password"/>
-            <button class="btn btn-lg btn-primary btn-block"
-                    type="submit" th:text="Login"/>
-          </form>
-        </div>
-      </div>
-      <div class="row justify-content-center">
-        <div class="col-sm-6">
-          <p th:if="${param.error}">Invalid username and password.</p>
-          <p th:if="${param.logout}">You have been logged out.</p>
-        </div>
-      </div>
-    </div>
-  </th:block>
-  <th:block th:case="'/preview'">
-    <th:block th:switch="${#request.method}">
-      <th:block th:case="'POST'">
-        <th:block th:if="${exception != null}">
-          <p th:text="${exception}"/>
-        </th:block>
-        <article th:if="${html != null}">
-          <div th:remove="tag" th:utext="${html}"/>
-        </article>
-      </th:block>
-      <th:block th:case="*">
-        <div class="jumbotron">
-          <div class="row justify-content-center">
-            <div class="col-sm-6">
-              <form th:action="${#request.servletPath}" method="post"
-                    enctype="multipart/form-data">
-                <input type="hidden"
-                       th:name="${_csrf.parameterName}"
-                       th:value="${_csrf.token}"/>
-                <input type="file" th:name="file"
-                       th:id="${#ids.seq('file')}"
-                       th:placeholder="'markdown file'"
-                       class="form-control-file" required autofocus/>
-                <label class="sr-only"
-                       th:for="${#ids.prev('file')}"
-                       th:text="'markdown file'"/>
-                <button class="btn btn-lg btn-primary btn-block"
-                        type="submit" th:text="Submit"/>
-              </form>
-            </div>
-          </div>
-        </div>
-      </th:block>
-    </th:block>
-  </th:block>
+<th:block th:if="${exception != null}">
+  <p th:text="${exception}"/>
 </th:block>
+<article th:if="${html != null}">
+  <div th:remove="tag" th:utext="${html}"/>
+</article>
