Quote string constants in template expressions.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3362 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/forvm/LoginForm.html
+++ b/src/main/resources/templates/forvm/LoginForm.html
@@ -13,12 +13,12 @@
                th:for="${#ids.prev('username')}"
                th:text="'E\'mail Address'"/>
         <input type="password" th:name="password"
-               th:id="${#ids.seq('password')}" th:placeholder="Password"
+               th:id="${#ids.seq('password')}" th:placeholder="'Password'"
                class="form-control" required autofocus/>
         <label class="sr-only"
-               th:for="${#ids.prev('password')}" th:text="Password"/>
+               th:for="${#ids.prev('password')}" th:text="'Password'"/>
         <button class="btn btn-lg btn-primary btn-block"
-                type="submit" th:text="Login"/>
+                type="submit" th:text="'Login'"/>
       </form>
     </div>
   </div>
