--- a/src/main/resources/templates/forvm/PreviewForm.html
+++ b/src/main/resources/templates/forvm/PreviewForm.html
@@ -17,7 +17,7 @@
                th:for="${#ids.prev('file')}"
                th:text="'markdown file'"/>
         <button class="btn btn-lg btn-primary btn-block"
-                type="submit" th:text="Submit"/>
+                type="submit" th:text="'Submit'"/>
       </form>
     </div>
   </div>
