Abandoned @Embedded PersonName in Author.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3469 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/forvm/body.html
+++ b/src/main/resources/templates/forvm/body.html
@@ -25,7 +25,7 @@
       <tr th:each="author : ${authors}" class="row">
         <td class="col-sm-2 text-left">
           <a th:href="@{/articles(author=${author.slug})}"
-             th:text="${author.name}"/>
+             th:text="${author.name ?: author.slug}"/>
         </td>
         <td class="col-sm">
           <div th:remove="tag" th:utext="${author.html}"/>
