Normalize article paths so attachment paths may be trivially calculated.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3525 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/forvm/menu.html
+++ b/src/main/resources/templates/forvm/menu.html
@@ -8,7 +8,7 @@
        href="#" th:text="'Author'"/>
     <div class="dropdown-menu"
          th:attr="aria-labelledby=${#ids.prev('dropdown')}">
-      <a class="dropdown-item" th:href="@{/preview}" th:text="'Preview'"/>
+      <a class="dropdown-item" th:href="@{/preview/}" th:text="'Preview'"/>
     </div>
   </li>
   <li sec:authorize="hasAuthority('SUBSCRIBER')"
@@ -29,7 +29,7 @@
        href="#" th:text="'Collections'"/>
     <div class="dropdown-menu"
          th:attr="aria-labelledby=${#ids.prev('dropdown')}">
-      <a class="dropdown-item" th:href="@{/authors}" th:text="'Authors'"/>
+      <a class="dropdown-item" th:href="@{/authors/}" th:text="'Authors'"/>
     </div>
   </li>
   <li sec:authorize="!isAuthenticated()" class="nav-item">
