--- a/src/main/resources/templates/forvm/body.html
+++ b/src/main/resources/templates/forvm/body.html
@@ -7,9 +7,9 @@
     <tbody>
       <tr th:each="article : ${articles}" class="row">
         <td class="col-sm">
-          <a class="row h1" th:href="@{/article/{slug}(slug=${article.slug})}"
+          <a class="row h1" th:href="@{/article/{slug}/(slug=${article.slug})}"
              th:text="${article.title}"/>
-          <a class="row" th:href="@{/articles(author=${article.author.slug})}"
+          <a class="row" th:href="@{/articles/(author=${article.author.slug})}"
              th:text="${article.author.name}"/>
         </td>
       </tr>
@@ -24,7 +24,7 @@
     <tbody>
       <tr th:each="author : ${authors}" class="row">
         <td class="col-sm-2 text-left">
-          <a th:href="@{/articles(author=${author.slug})}"
+          <a th:href="@{/articles/(author=${author.slug})}"
              th:text="${author.name ?: author.slug}"/>
         </td>
         <td class="col-sm">
