Wrapped article in HTML5 <article/> tag.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3876 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/forvm/main.html
+++ b/src/main/resources/templates/forvm/main.html
@@ -17,7 +17,9 @@
   </table>
 </th:block>
 <th:block th:if="${#ctx.containsVariable('article')}">
-  <div th:remove="tag" th:utext="${article.html}"/>
+  <article>
+    <div th:remove="tag" th:utext="${article.html}"/>
+  </article>
 </th:block>
 <th:block th:if="${#ctx.containsVariable('authors')}">
   <table class="table table-striped">
