--- a/src/main/sass/static/css/style.scss
+++ b/src/main/sass/static/css/style.scss
@@ -1,5 +1,18 @@
 /* $Id$ */
 
+/* @import "/webjars/bootstrap/css/bootstrap.css"; */
+@import "META-INF/resources/webjars/bootstrap/4.3.1/scss/bootstrap";
+
+@import "/webjars/prismjs/themes/prism-tomorrow.css";
+@import "/webjars/prismjs/plugins/toolbar/prism-toolbar.css";
+@import "/webjars/prismjs/plugins/autolinker/prism-autolinker.css";
+@import "/webjars/prismjs/plugins/command-line/prism-command-line.css";
+@import "/webjars/prismjs/plugins/line-highlight/prism-line-highlight.css";
+@import "/webjars/prismjs/plugins/line-numbers/prism-line-numbers.css";
+@import "/webjars/prismjs/plugins/previewers/prism-previewers.css";
+@import "/webjars/prismjs/plugins/unescaped-markup/prism-unescaped-markup.css";
+@import "/webjars/prismjs/plugins/wpd/prism-wpd.css";
+
 body {
   padding-top: 60px;
   margin-bottom: 60px;
@@ -10,3 +23,11 @@ body {
     padding-top: 0px;
   }
 }
+
+/* body > header { @extend .navbar, .navbar-dark, .fixed-top, .bg-dark, .text-white; } */
+body > main { @extend .container; }
+/*
+ * forvm/main.html
+ */
+main > table { @extend .table, .table-striped; }
+main > table > tbody > tr { @extend .row; }
